--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
       type="image/png"
       href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcHIGU9eZRWz8LVBerV7ebZQLd38hcij7k2Q&s"
     />
+    <link rel="stylesheet" href="style.css" />
+    <script type="module" src="./script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <heder>
+      <h1></h1>
+      <div class="sub">
+        <b></b>
+        <b></b>
+        <b></b>
+      </div>
+    </heder>
+  </body>
 </html>
