--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   </head>
   <body>
     <heder>
-      <h1></h1>
+      <h1>HIIT: 4-тижневий план + таймер</h1>
       <div class="sub">
-        <b></b>
-        <b></b>
-        <b></b>
+        Формат одного кола:
+        <b>60с робота |</b>
+        <b>20с відпочинок |</b>
+        <b>10 раундів</b>
       </div>
     </heder>
   </body>
