--- a/index.html
+++ b/index.html
@@ -14,13 +14,26 @@
   </head>
   <body>
     <heder>
-      <h1>HIIT: 4-тижневий план + таймер</h1>
+      <h1>HIIT: 4-Week Plan + Timer</h1>
       <div class="sub">
-        Формат одного кола:
-        <b>60с робота |</b>
-        <b>20с відпочинок |</b>
-        <b>10 раундів</b>
+        Format of one round:
+        <b>60s work |</b>
+        <b>2020s rest |</b>
+        <b>10 rounds</b>
       </div>
     </heder>
+    <main class="grid">
+      <section class="card">
+        <h2></h2>
+        <div class="tabs">
+          <div class="tab active" data-tab="jump"></div>
+          <div class="tab" data-tab="low"></div>
+        </div>
+        <div class="jump"></div>
+        <div class="low"></div>
+      </section>
+      <section class="card"></section>
+      <section class="card"></section>
+    </main>
   </body>
 </html>
