--- a/index.html
+++ b/index.html
@@ -29,38 +29,40 @@
           <div class="tab" data-tab="low">Low-Impact</div>
         </div>
 
-        <div class="jump">
-          <span class="pill">10 min</span>
-          <span class="pill">60/20</span>
-          <ol>
-            <li>Burpees</li>
-            <li>Mountain Climbers</li>
-            <li>Jump Squats</li>
-            <li>Jumping Lunges</li>
-            <li>Push-Up + Jump</li>
-            <li>High-Knee Sprint in Place</li>
-            <li>Plank Twist</li>
-            <li>Jumping Jacks</li>
-            <li>Squat + Arm Throw</li>
-            <li><b>Finish Strong — Burpees Max</b></li>
-          </ol>
-        </div>
+        <div class="tab-content">
+          <div id="jump" class="tabpane">
+            <span class="pill">10 min</span>
+            <span class="pill">60/20</span>
+            <ol>
+              <li>Burpees</li>
+              <li>Mountain Climbers</li>
+              <li>Jump Squats</li>
+              <li>Jumping Lunges</li>
+              <li>Push-Up + Jump</li>
+              <li>High-Knee Sprint in Place</li>
+              <li>Plank Twist</li>
+              <li>Jumping Jacks</li>
+              <li>Squat + Arm Throw</li>
+              <li><b>Finish Strong — Burpees Max</b></li>
+            </ol>
+          </div>
 
-        <div id="low" class="tabpane" hidden>
-          <span class="pill">10 min</span>
-          <span class="pill">60/20</span>
-          <ol>
-            <li>Burpees (No Jump)</li>
-            <li>Mountain Climbers</li>
-            <li>Controlled Squats</li>
-            <li>Reverse Lunges</li>
-            <li>Push-Up + Knee Lift</li>
-            <li>High-Knee March</li>
-            <li>Plank Shoulder Tap</li>
-            <li>Arm Jacks</li>
-            <li>Squat + Torso Twist</li>
-            <li><b>Finish Strong — Plank Knee Tucks</b></li>
-          </ol>
+          <div id="low" class="tabpane" hidden>
+            <span class="pill">10 min</span>
+            <span class="pill">60/20</span>
+            <ol>
+              <li>Burpees (No Jump)</li>
+              <li>Mountain Climbers</li>
+              <li>Controlled Squats</li>
+              <li>Reverse Lunges</li>
+              <li>Push-Up + Knee Lift</li>
+              <li>High-Knee March</li>
+              <li>Plank Shoulder Tap</li>
+              <li>Arm Jacks</li>
+              <li>Squat + Torso Twist</li>
+              <li><b>Finish Strong — Plank Knee Tucks</b></li>
+            </ol>
+          </div>
         </div>
       </section>
 
