--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
   </head>
   <body>
     <header>
-      <h1>HIIT: 4-Week Plan + Timer</h1>
-      <div class="sub">
+      <h1 id="title">HIIT: 4-Week Plan + Timer</h1>
+      <div class="sub" id="subtitle">
         One round: <b>60s work |</b> <b>20s rest |</b> <b>10 rounds</b>
       </div>
-    </header>
-    <main class="grid">
-      <!-- Workout Complexes -->
 
+      <div class="controls">
+        <button id="theme-toggle">🌙</button>
+      </div>
+    </header>
+
+    <main class="grid">
+      <!-- Workout Combos -->
       <section class="card">
         <h2>Workout Combos</h2>
         <div class="tabs">
